# Rust_Lab4

./: Cargo.toml
src/: main.html  main.rs
